[gd_scene load_steps=46 format=2]

[ext_resource path="res://SP-Tileset.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://start_pos.tscn" type="PackedScene" id=4]
[ext_resource path="res://end_pos.tscn" type="PackedScene" id=5]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 0, 4, 16, 4, 16, 12, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 4, 16, 4, 16, 12, 12, 12, 12, 16, 4, 16, 4, 12, 0, 12, 0, 4, 4, 4 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ) ]

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 4, 16, 4, 16, 12, 12, 12, 12, 16, 4, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7 ) ]

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 16, 4, 16, 4, 12, 0, 12, 0, 4, 4, 4 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7 ) ]

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 4, 4, 12, 4, 12, 12, 4, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=6]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 16, 4, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=7]
vertices = PoolVector2Array( 4, 4, 12, 4, 12, 16, 4, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=8]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 16, 4, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=9]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 12, 4, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=10]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 12, 16, 12, 4, 4, 4, 4, 12, 12, 12, 12, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ) ]

[sub_resource type="NavigationPolygon" id=11]
vertices = PoolVector2Array( 4, 4, 16, 4, 16, 12, 4, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=12]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 4, 16, 4, 16, 12, 0, 12, 0, 4, 4, 4 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7 ) ]

[sub_resource type="NavigationPolygon" id=13]
vertices = PoolVector2Array( 0, 4, 16, 4, 16, 12, 12, 12, 12, 16, 4, 16, 4, 12, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7 ) ]

[sub_resource type="NavigationPolygon" id=14]
vertices = PoolVector2Array( 8, 8, 16, 4, 16, 16, 4, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=15]
vertices = PoolVector2Array( 4, 0, 16, 0, 16, 12, 8, 8 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=16]
vertices = PoolVector2Array( 0, 4, 16, 4, 16, 12, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=17]
vertices = PoolVector2Array( 4, 4, 16, 4, 16, 12, 12, 12, 12, 16, 4, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=18]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 4, 16, 4, 16, 12, 4, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=19]
vertices = PoolVector2Array( 0, 4, 8, 8, 12, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=20]
vertices = PoolVector2Array( 0, 0, 12, 0, 8, 8, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=21]
vertices = PoolVector2Array( 0, 4, 12, 4, 12, 12, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=22]
vertices = PoolVector2Array( 0, 4, 12, 4, 12, 16, 4, 16, 4, 12, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=23]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 12, 0, 12, 0, 4, 4, 4 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=24]
vertices = PoolVector2Array( 4, 0, 16, 0, 16, 16, 4, 16, 4, 12, 0, 12, 0, 4, 4, 4 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7 ) ]

[sub_resource type="NavigationPolygon" id=25]
vertices = PoolVector2Array( 4, 0, 12, 0, 12, 4, 16, 4, 16, 16, 0, 16, 0, 4, 4, 4 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7 ) ]

[sub_resource type="NavigationPolygon" id=26]
vertices = PoolVector2Array( 4, 4, 16, 4, 16, 16, 4, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=27]
vertices = PoolVector2Array( 4, 0, 16, 0, 16, 16, 4, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=28]
vertices = PoolVector2Array( 4, 0, 16, 0, 16, 12, 4, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=29]
vertices = PoolVector2Array( 0, 0, 0, 0, 12, 0, 12, 4, 16, 4, 16, 12, 12, 12, 12, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ) ]

[sub_resource type="NavigationPolygon" id=30]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 12, 12, 12, 12, 16, 4, 16, 4, 12, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7 ) ]

[sub_resource type="NavigationPolygon" id=31]
vertices = PoolVector2Array( 0, 4, 16, 4, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=32]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=33]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 12, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=34]
vertices = PoolVector2Array( 4, 0, 16, 0, 16, 16, 0, 16, 0, 4, 4, 4 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=35]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 4, 16, 4, 12, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=36]
vertices = PoolVector2Array( 0, 4, 12, 4, 12, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=37]
vertices = PoolVector2Array( 0, 0, 12, 0, 12, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=38]
vertices = PoolVector2Array( 0, 0, 12, 0, 12, 12, 0, 12 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=39]
vertices = PoolVector2Array( 0, 0, 12, 0, 12, 4, 16, 4, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=40]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 12, 12, 12, 12, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="TileSet" id=41]
0/name = "SP-Tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 544, 128, 80 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 1 ), 186, Vector2( 0, 2 ), 178, Vector2( 0, 3 ), 154, Vector2( 0, 4 ), 16, Vector2( 1, 1 ), 144, Vector2( 1, 2 ), 146, Vector2( 1, 3 ), 18, Vector2( 1, 4 ), 495, Vector2( 2, 0 ), 48, Vector2( 2, 1 ), 58, Vector2( 2, 2 ), 184, Vector2( 2, 3 ), 432, Vector2( 2, 4 ), 54, Vector2( 3, 0 ), 56, Vector2( 3, 1 ), 176, Vector2( 3, 2 ), 50, Vector2( 3, 3 ), 216, Vector2( 3, 4 ), 27, Vector2( 4, 0 ), 24, Vector2( 4, 1 ), 152, Vector2( 4, 2 ), 26, Vector2( 4, 3 ), 446, Vector2( 4, 4 ), 250, Vector2( 5, 0 ), 432, Vector2( 5, 1 ), 438, Vector2( 5, 2 ), 54, Vector2( 5, 3 ), 251, Vector2( 5, 4 ), 191, Vector2( 6, 0 ), 504, Vector2( 6, 1 ), 511, Vector2( 6, 2 ), 63, Vector2( 6, 3 ), 510, Vector2( 6, 4 ), 447, Vector2( 7, 0 ), 216, Vector2( 7, 1 ), 219, Vector2( 7, 2 ), 27, Vector2( 7, 3 ), 507, Vector2( 7, 4 ), 255 ]
0/autotile/icon_coordinate = Vector2( 0, 4 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [ Vector2( 0, 0 ), SubResource( 1 ), Vector2( 0, 1 ), SubResource( 2 ), Vector2( 0, 2 ), SubResource( 3 ), Vector2( 0, 3 ), SubResource( 4 ), Vector2( 0, 4 ), SubResource( 5 ), Vector2( 1, 0 ), SubResource( 6 ), Vector2( 1, 1 ), SubResource( 7 ), Vector2( 1, 2 ), SubResource( 8 ), Vector2( 1, 3 ), SubResource( 9 ), Vector2( 1, 4 ), SubResource( 10 ), Vector2( 2, 0 ), SubResource( 11 ), Vector2( 2, 1 ), SubResource( 12 ), Vector2( 2, 2 ), SubResource( 13 ), Vector2( 2, 3 ), SubResource( 14 ), Vector2( 2, 4 ), SubResource( 15 ), Vector2( 3, 0 ), SubResource( 16 ), Vector2( 3, 1 ), SubResource( 17 ), Vector2( 3, 2 ), SubResource( 18 ), Vector2( 3, 3 ), SubResource( 19 ), Vector2( 3, 4 ), SubResource( 20 ), Vector2( 4, 0 ), SubResource( 21 ), Vector2( 4, 1 ), SubResource( 22 ), Vector2( 4, 2 ), SubResource( 23 ), Vector2( 4, 3 ), SubResource( 24 ), Vector2( 4, 4 ), SubResource( 25 ), Vector2( 5, 0 ), SubResource( 26 ), Vector2( 5, 1 ), SubResource( 27 ), Vector2( 5, 2 ), SubResource( 28 ), Vector2( 5, 3 ), SubResource( 29 ), Vector2( 5, 4 ), SubResource( 30 ), Vector2( 6, 0 ), SubResource( 31 ), Vector2( 6, 1 ), SubResource( 32 ), Vector2( 6, 2 ), SubResource( 33 ), Vector2( 6, 3 ), SubResource( 34 ), Vector2( 6, 4 ), SubResource( 35 ), Vector2( 7, 0 ), SubResource( 36 ), Vector2( 7, 1 ), SubResource( 37 ), Vector2( 7, 2 ), SubResource( 38 ), Vector2( 7, 3 ), SubResource( 39 ), Vector2( 7, 4 ), SubResource( 40 ) ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "SP-Tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 192, 32 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Navigation2D"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.25098, 0.729412, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path" type="TileMap" parent="Navigation2D"]
tile_set = SubResource( 41 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 11, 1, 65538, 65540, 1, 1, 65553, 1, 65543, 131072, 0, 2, 131073, 0, 3, 131074, 0, 3, 131075, 0, 3, 131076, 0, 3, 131077, 0, 3, 131078, 0, 3, 131079, 0, 3, 131080, 0, 3, 131081, 0, 3, 131082, 0, 3, 131083, 0, 3, 131084, 0, 65540, 131087, 0, 65539, 131088, 0, 3, 131089, 0, 3, 131090, 0, 65540, 196610, 1, 0, 196617, 1, 65540, 196620, 0, 131073, 196622, 1, 65537, 196623, 0, 131073, 196624, 1, 5, 196626, 0, 131073, 262148, 0, 65539, 262149, 0, 3, 262150, 0, 3, 262151, 0, 3, 262152, 0, 3, 262153, 0, 65540, 262156, 0, 131073, 262157, 1, 65536, 262159, 0, 131073, 262162, 0, 131073, 327684, 0, 131073, 327686, 1, 10, 327687, 1, 10, 327688, 1, 10, 327689, 0, 131073, 327692, 0, 131073, 327694, 1, 65536, 327695, 0, 131073, 327697, 1, 65541, 327698, 0, 131073, 393220, 0, 131073, 393222, 1, 10, 393223, 0, 65537, 393224, 1, 10, 393225, 0, 131073, 393228, 0, 131075, 393229, 0, 3, 393230, 0, 3, 393231, 0, 131076, 393234, 0, 131073, 458754, 1, 2, 458756, 0, 131073, 458758, 1, 10, 458759, 0, 131075, 458760, 0, 3, 458761, 0, 131076, 458763, 1, 7, 458770, 0, 131073, 524292, 0, 131073, 524301, 1, 4, 524304, 1, 6, 524306, 0, 131073, 589828, 0, 131075, 589829, 0, 3, 589830, 0, 3, 589831, 0, 3, 589832, 0, 3, 589833, 0, 3, 589834, 0, 3, 589835, 0, 3, 589836, 0, 3, 589837, 0, 3, 589838, 0, 3, 589839, 0, 3, 589840, 0, 3, 589841, 0, 3, 589842, 0, 131076, 655367, 1, 65541, 655375, 1, 65544, 655377, 1, 65545 )

[node name="start_pos" parent="." instance=ExtResource( 4 )]
position = Vector2( 16.4469, 39.4061 )

[node name="end_pos" parent="." instance=ExtResource( 5 )]
position = Vector2( 120.015, 99.0177 )

[node name="mob_timer" type="Timer" parent="."]
[connection signal="timeout" from="mob_timer" to="." method="_on_mob_timer_timeout"]
